docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "@types/d3-scale": "^2.0.0",
         "@types/d3-shape": "^1.2.2",
         "@types/jest": "^26.0.20",
+        "@types/shelljs": "^0.7.8",
         "@types/lodash.mergewith": "^4.6.6",
         "@types/prettier": "^2.1.5",
         "@types/minimatch": "^3.0.3",
@@ -95,6 +96,7 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-spellcheck": "0.0.8",
         "folio": "^0.3.18",
+        "shelljs": "^0.7.8",
         "gradient-string": "^1.2.0",
         "hasha": "5.2.2",
         "import-fresh": "^3.2.1",
