docs: updates on workflows
Added information on documentation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -209,6 +209,7 @@
         "browser": true
     },
     "globals": {
+        "NodeJS": "readonly",
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     }
