--- a/package.json
+++ b/package.json
@@ -67,10 +67,10 @@
         "@types/d3-scale": "^2.0.0",
         "@types/d3-shape": "^1.2.2",
         "@types/jest": "^26.0.20",
-        "@types/shelljs": "^0.7.8",
         "@types/lodash.mergewith": "^4.6.6",
-        "@types/prettier": "^2.1.5",
         "@types/minimatch": "^3.0.3",
+        "@types/prettier": "^2.1.5",
+        "@types/shelljs": "^0.7.8",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
         "axios": "^0.21.1",
@@ -78,7 +78,6 @@
         "canvas": "^2.7.0",
         "conventional-changelog-cli": "^2.0.0",
         "crypto": "^1.0.1",
-        "minimatch": "^3.0.4",
         "d3-array": "^1.2.1",
         "d3-scale": "^2.0.0",
         "d3-shape": "^1.2.0",
@@ -96,18 +95,20 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-spellcheck": "0.0.8",
         "folio": "^0.3.18",
-        "shelljs": "^0.7.8",
+        "fs-extra": "^9.1.0",
         "gradient-string": "^1.2.0",
         "hasha": "5.2.2",
         "import-fresh": "^3.2.1",
         "is-regex": "^1.0.5",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
+        "js-yaml": "^4.0.0",
         "jsdom": "16.4.0",
         "jsdom-global": "3.0.2",
         "license-badger": "^0.18.0",
         "license-checker": "^25.0.1",
         "markdown-link-check": "^3.8.6",
+        "minimatch": "^3.0.4",
         "object-hash": "^2.1.1",
         "opener": "^1.5.1",
         "ow": "^0.13.2",
@@ -122,6 +123,7 @@
         "remark-preset-davidtheclark": "^0.12.0",
         "remark-validate-links": "^10.0.2",
         "semantic-release": ">=17.2.3",
+        "shelljs": "^0.7.8",
         "slugify": "^1.4.6",
         "styled-components": "^4.3.2",
         "ts-jest": "^26.4.4",
