--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "watch": "tsdx watch",
         "clean": "del-cli --dot=true \"./dist/**/*\"",
         "reinstall": "del-cli --dot=true ./node_modules ./package-lock.json ./yarn.lock",
+        "coverage": "cat ./coverage/lcov.info | coveralls",
         "version": "git add -A dist",
         "postpublish": "git push && git push --tags",
         "yaspeller": "yaspeller .",
@@ -117,6 +118,7 @@
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0",
         "randomcolor": "^0.5.4",
+        "coveralls": "^3.0.0",
         "remark-cli": "^9.0.0",
         "remark-lint-code-block-style": "^2.0.1",
         "remark-lint-ordered-list-marker-value": "^2.0.1",
