docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "lint:md": "remark-preset-davidtheclark",
         "format:md": "remark-preset-davidtheclark --format",
         "docs": "typedoc",
+        "codecov": "codecov",
         "semantic-release": "semantic-release",
         "test:folio": "env-cmd --silent -e test folio tests/spec/",
         "test": "env-cmd --silent -e test jest",
@@ -77,7 +78,9 @@
         "axios": "^0.21.1",
         "boxen": "^5.0.0",
         "canvas": "^2.7.0",
+        "codecov": "^3.8.1",
         "conventional-changelog-cli": "^2.0.0",
+        "coveralls": "^3.0.0",
         "crypto": "^1.0.1",
         "d3-array": "^1.2.1",
         "d3-scale": "^2.0.0",
@@ -118,7 +121,6 @@
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0",
         "randomcolor": "^0.5.4",
-        "coveralls": "^3.0.0",
         "remark-cli": "^9.0.0",
         "remark-lint-code-block-style": "^2.0.1",
         "remark-lint-ordered-list-marker-value": "^2.0.1",
