--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -155,7 +155,7 @@
         "@typescript-eslint/no-require-imports": "error",
         "@typescript-eslint/array-type": "error",
         "@typescript-eslint/await-thenable": "error",
-        "@typescript-eslint/ban-ts-comment": "error",
+        "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/consistent-type-assertions": "error",
         "@typescript-eslint/explicit-function-return-type": [
             "error",
