--- a/.codecov.yml
+++ b/.codecov.yml
@@ -8,15 +8,26 @@ codecov:
 coverage:
   precision: 2
   round: down
-  range: '70...100'
+  range: "70...100"
 
   status:
+    src:
+      target: auto
+      threshold: 7%
+      base: auto
+      if_ci_failed: success
+      paths:
+        - src/
+      flags:
+        - src
+
     project:
       default:
         base: auto
         informational: true
         target: 95%
         threshold: 1%
+
     patch:
       default:
         informational: true
@@ -30,9 +41,15 @@ coverage:
     after_n_builds: 8
 
   ignore:
-    - '**/generated/**'
-    - 'standalone'
-    - 'test'
+    - "**/generated/**"
+    - "docs"
+    - "scripts"
+    - "tests"
+
+flags:
+  src:
+    paths:
+      - src
 
 parsers:
   gcov:
@@ -43,9 +60,9 @@ parsers:
       macro: no
 
 comment:
-  layout: 'header, reach, diff, flags, files, footer'
+  layout: "header, reach, diff, flags, files, footer"
   behavior: default
   require_changes: false
   require_base: false
   require_head: true
-  branches: [ 'master' ]
+  branches: [ "master" ]
