docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
         "bump:major": "npm version major --no-git-tag-version",
         "postreinstall": "yarn setup",
         "setup": "yarn",
-        "yarn:import": "del-cli --dot=true ./yarn.lock && yarn import",
+        "yarn:import": "rimraf ./yarn.lock && yarn import",
         "prepublishOnly": "npm run check:all && npm run build",
         "preinstall": "npm run clean",
-        "prebuild": "del-cli dist coverage .cache",
+        "prebuild": "rimraf dist coverage .cache",
         "build": "tsdx build",
         "watch": "tsdx watch",
-        "clean": "del-cli --dot=true dist",
-        "reinstall": "del-cli --dot=true ./node_modules ./package-lock.json ./yarn.lock",
+        "clean": "rimraf dist",
+        "reinstall": "rimraf ./node_modules ./package-lock.json ./yarn.lock",
         "coverage": "cat ./coverage/lcov.info | coveralls",
         "version": "git add -A dist",
         "postpublish": "git push && git push --tags",
         "yaspeller": "yaspeller .",
         "markdown:check": "markdown-link-check ./README.md ./SECURITY.md",
         "lint": "eslint --cache --fix --quiet --cache-location .cache/ --format codeframe --ext js,ts .",
-        "lint:clean": "del-cli .eslintcache",
+        "lint:clean": "rimraf .eslintcache",
         "lint:report": "tsdx lint src tools --report-file report.json",
         "license:badge": "license-badger --corrections --uncategorizedLicenseTemplate \"\\${license} (\\${name} (\\${version}))\" --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(project, deps, and bundled devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --packageJson --production -l licenseInfo.json ./badges/licenses-badge.svg",
         "license:badge-dev": "license-badger --corrections --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(all devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --allDevelopment -l licenseInfo.json ./badges/licenses-badge-dev.svg",
@@ -89,7 +89,6 @@
         "dateformat": "^4.5.1",
         "dayjs": "^1.10.4",
         "dayjs-precise-range": "^1.0.1",
-        "del-cli": "^3.0.1",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-github": "^4.1.2",
@@ -126,6 +125,7 @@
         "remark-lint-ordered-list-marker-value": "^2.0.1",
         "remark-preset-davidtheclark": "^0.12.0",
         "remark-validate-links": "^10.0.2",
+        "rimraf": "^3.0.2",
         "semantic-release": ">=17.2.3",
         "shelljs": "^0.7.8",
         "slugify": "^1.4.6",
