--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
         "all": "npm run format:all && npm run lint:all && npm run pretty && npm run build"
     },
     "dependencies": {
+        "big-integer": "^1.6.48",
+        "env-cmd": "^10.1.0",
         "isomorphic-unfetch": "^3.1.0",
-        "lodash": "^4.17.20",
-        "env-cmd": "^10.1.0"
+        "lodash": "^4.17.20"
     },
     "devDependencies": {
         "@arkweid/lefthook": "^0.7.2",
