--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "dependencies": {
         "big-integer": "^1.6.48",
         "env-cmd": "^10.1.0",
+        "es6-promisify": "^6.1.1",
         "isomorphic-unfetch": "^3.1.0",
         "lodash": "^4.17.20"
     },
