--- a/.github/workflows/closing.yml
+++ b/.github/workflows/closing.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Add closed question comment
         uses: peter-evans/create-or-update-comment@v1
-        if: (contains(github.event.issue.labels.*.name, 'question') && ! contains(github.event.issue.labels.*.name, 'wontfix')) || join(github.event.issue.labels.*.name) == ''
+        if: "(contains(github.event.issue.labels.*.name, 'question') && ! contains(github.event.issue.labels.*.name, 'wontfix')) || join(github.event.issue.labels.*.name) == ''"
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.issue.number }}
@@ -19,6 +19,7 @@ jobs:
             The issue you have reported is resolved now. If you don’t feel it’s right, please follow it’s labels to get a clue and take further steps.
             * In case you see a similar problem, please open a separate issue.
             * If you are happy with the outcome, don’t hesitate to support Weblate by making a [donation](https://ko-fi.com/alexrogalskiy).
+
       - name: Add closed issue comment
         uses: peter-evans/create-or-update-comment@v1
         if: "! contains(github.event.issue.labels.*.name, 'invalid') && ! contains(github.event.issue.labels.*.name, 'question') && ! contains(github.event.issue.labels.*.name, 'wontfix') && ! contains(github.event.issue.labels.*.name, 'duplicate') && ! contains(github.event.issue.labels.*.name, 'undecided') && ! contains(github.event.issue.labels.*.name, 'needinfo') && join(github.event.issue.labels.*.name) != ''"
@@ -30,3 +31,39 @@ jobs:
             * In case you see a problem with the fix, please comment on this issue.
             * In case you see a similar problem, please open a separate issue.
             * If you are happy with the outcome, don’t hesitate to support Weblate by making a [donation](https://ko-fi.com/alexrogalskiy).
+
+      - name: Add backlog comment
+        uses: peter-evans/create-or-update-comment@v1
+        if: "github.event.label.name == 'backlog'"
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            This issue has been added to the backlog. It is not scheduled on the Weblate roadmap, but it eventually might be implemented. In case you need this feature soon, please consider helping or push it by [funding the development](https://weblate.org/support/).
+
+      - name: Add undecided comment
+        uses: peter-evans/create-or-update-comment@v1
+        if: "github.event.label.name == 'undecided'"
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            This issue has been put aside. It is currently unclear if it will ever be implemented as it seems to cover too narrow of a use case or doesn't seem to fit into Weblate. Please try to clarify the use case or consider proposing something more generic to make it useful to more users.
+
+      - name: Add question comment
+        uses: peter-evans/create-or-update-comment@v1
+        if: "github.event.label.name == 'question'"
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            This issue looks more like a support question than an issue. We strive to answer these reasonably fast, but [purchasing the support subscription](https://weblate.org/support/) is not only more responsible and faster for your business but also makes Weblate stronger. In case your question is already answered, [making a donation](https://weblate.org/donate/) is the right way to say thank you!
+
+      - name: Add translate-toolkit comment
+        uses: peter-evans/create-or-update-comment@v1
+        if: "github.event.label.name == 'translate-toolkit'"
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            The issue you've reported needs to be addressed in the [translate-toolkit](https://github.com/translate/translate/). Please file the issue there, and include links to any relevant specifications about the formats (if applicable).
