--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "dependencies": {
         "big-integer": "^1.6.48",
         "env-cmd": "^10.1.0",
-        "es6-promisify": "^6.1.1",
         "isomorphic-unfetch": "^3.1.0",
         "lodash": "^4.17.20"
     },
@@ -91,6 +90,7 @@
         "dateformat": "^4.5.1",
         "dayjs": "^1.10.4",
         "dayjs-precise-range": "^1.0.1",
+        "es6-promisify": "^6.1.1",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-github": "^4.1.2",
@@ -114,6 +114,7 @@
         "license-checker": "^25.0.1",
         "markdown-link-check": "^3.8.6",
         "minimatch": "^3.0.4",
+        "mkdirp": "^1.0.4",
         "object-hash": "^2.1.1",
         "opener": "^1.5.1",
         "ow": "^0.13.2",
@@ -139,7 +140,9 @@
         "typedoc": "^0.20.28",
         "typescript": "^4.1.3",
         "typescript-object-utils": "^0.4.1",
+        "util.promisify": "^1.1.1",
         "utility-types": "^3.10.0",
+        "uuid": "^8.3.2",
         "vague-time": "^2.4.2",
         "ws": "^7.4.3",
         "xmldoc": "^1.1.2",
