--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
         "eslint-plugin-spellcheck": "0.0.8",
         "folio": "^0.3.18",
         "fs-extra": "^9.1.0",
+        "github-url-parse": "^0.1.0",
         "gradient-string": "^1.2.0",
         "hasha": "5.2.2",
         "import-fresh": "^3.2.1",
