docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "postpublish": "git push && git push --tags",
         "yaspeller": "yaspeller .",
         "markdown:check": "markdown-link-check ./README.md ./SECURITY.md",
+        "gitlog": "node ./scripts/changelog.js",
         "lint": "eslint --cache --fix --quiet --cache-location .cache/ --format codeframe --ext js,ts .",
         "lint:clean": "rimraf .eslintcache",
         "lint:report": "tsdx lint src tools --report-file report.json",
@@ -102,6 +103,7 @@
         "folio": "^0.3.18",
         "fs-extra": "^9.1.0",
         "github-url-parse": "^0.1.0",
+        "got": "^11.8.2",
         "gradient-string": "^1.2.0",
         "hasha": "5.2.2",
         "import-fresh": "^3.2.1",
@@ -141,6 +143,7 @@
         "typedoc": "^0.20.28",
         "typescript": "^4.1.3",
         "typescript-object-utils": "^0.4.1",
+        "unzip-stream": "^0.3.1",
         "util.promisify": "^1.1.1",
         "utility-types": "^3.10.0",
         "uuid": "^8.3.2",
