--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "@types/shelljs": "^0.7.8",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
+        "async-retry": "^1.3.1",
         "axios": "^0.21.1",
         "boxen": "^5.0.0",
         "canvas": "^2.7.0",
