--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
         "bump:major": "npm version major --no-git-tag-version",
         "postreinstall": "yarn setup",
         "setup": "yarn",
-        "yarn:import": "rimraf ./yarn.lock && yarn import",
+        "yarn:import": "(rimraf ./yarn.lock || true) && yarn import",
         "prepublishOnly": "npm run check:all && npm run build",
         "preinstall": "npm run clean",
-        "prebuild": "rimraf dist coverage .cache",
+        "prebuild": "rimraf dist coverage .cache || true",
         "build": "tsdx build",
         "watch": "tsdx watch",
-        "clean": "rimraf dist",
-        "reinstall": "rimraf ./node_modules",
+        "clean": "rimraf dist || true",
+        "reinstall": "rimraf ./node_modules || true",
         "coverage": "cat ./coverage/lcov.info | coveralls",
         "version": "git add -A dist",
         "postpublish": "git push && git push --tags",
@@ -31,7 +31,7 @@
         "markdown:check": "markdown-link-check ./README.md ./SECURITY.md",
         "gitlog": "node ./scripts/changelog.js",
         "lint": "eslint --cache --fix --quiet --cache-location .cache/ --format codeframe --ext js,ts .",
-        "lint:clean": "rimraf .eslintcache",
+        "lint:clean": "rimraf .eslintcache || true",
         "lint:report": "tsdx lint src tools --report-file report.json",
         "license:badge": "license-badger --corrections --uncategorizedLicenseTemplate \"\\${license} (\\${name} (\\${version}))\" --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(project, deps, and bundled devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --packageJson --production -l licenseInfo.json ./badges/licenses-badge.svg",
         "license:badge-dev": "license-badger --corrections --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(all devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --allDevelopment -l licenseInfo.json ./badges/licenses-badge-dev.svg",
@@ -70,6 +70,8 @@
         "@types/d3-array": "^1.2.1",
         "@types/d3-scale": "^2.0.0",
         "@types/d3-shape": "^1.2.2",
+        "@types/humps": "^2.0.0",
+        "@types/got": "^9.6.11",
         "@types/jest": "^26.0.20",
         "@types/lodash.mergewith": "^4.6.6",
         "@types/minimatch": "^3.0.3",
@@ -107,6 +109,7 @@
         "got": "^11.8.2",
         "gradient-string": "^1.2.0",
         "hasha": "5.2.2",
+        "humps": "^2.0.1",
         "import-fresh": "^3.2.1",
         "is-regex": "^1.0.5",
         "jest": "^26.6.3",
@@ -114,6 +117,7 @@
         "js-yaml": "^4.0.0",
         "jsdom": "16.4.0",
         "jsdom-global": "3.0.2",
+        "json-schemify": "0.0.10",
         "license-badger": "^0.18.0",
         "license-checker": "^25.0.1",
         "markdown-link-check": "^3.8.6",
@@ -152,6 +156,7 @@
         "ws": "^7.4.3",
         "xmldoc": "^1.1.2",
         "yaml": "^1.10.0",
+        "yamljs": "^0.3.0",
         "yaspeller": "^7.0.0"
     },
     "repository": {
