--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "license:badge": "license-badger --corrections --uncategorizedLicenseTemplate \"\\${license} (\\${name} (\\${version}))\" --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(project, deps, and bundled devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --packageJson --production -l licenseInfo.json ./badges/licenses-badge.svg",
         "license:badge-dev": "license-badger --corrections --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(all devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --allDevelopment -l licenseInfo.json ./badges/licenses-badge-dev.svg",
         "license:badges": "npm run license:badge && npm run license:badge-dev",
+        "license:report": "yarn licenses list > license_report.txt",
         "license": "license-checker --json > licenses.json",
         "pretty": "pretty-quick --staged --pattern '!test/tests/lint/**'",
         "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -70,8 +71,8 @@
         "@types/d3-array": "^1.2.1",
         "@types/d3-scale": "^2.0.0",
         "@types/d3-shape": "^1.2.2",
-        "@types/humps": "^2.0.0",
         "@types/got": "^9.6.11",
+        "@types/humps": "^2.0.0",
         "@types/jest": "^26.0.20",
         "@types/lodash.mergewith": "^4.6.6",
         "@types/minimatch": "^3.0.3",
@@ -104,6 +105,7 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-spellcheck": "0.0.8",
         "folio": "^0.3.18",
+        "form-data": "^4.0.0",
         "fs-extra": "^9.1.0",
         "github-url-parse": "^0.1.0",
         "got": "^11.8.2",
