--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "format:check": "prettier --check \"./src/**/*.ts\" \"./tools/**/*.ts\"",
         "install-peers": "npm ls 2>/dev/null | grep \"UNMET PEER DEPENDENCY\" | awk '{print $NF}' | xargs npm install -D",
         "coverage:open": "opener ./coverage/lcov-report/index.html",
-        "postversion": "npm publish --access public",
+        "postversion": "git push --follow-tags && npm publish --access public",
         "bump:patch": "npm version patch --no-git-tag-version",
         "bump:minor": "npm version minor --no-git-tag-version",
         "bump:major": "npm version major --no-git-tag-version",
@@ -157,6 +157,8 @@
         "vague-time": "^2.4.2",
         "ws": "^7.4.3",
         "xmldoc": "^1.1.2",
+        "xmldom": "^0.6.0",
+        "xpath": "0.0.32",
         "yaml": "^1.10.0",
         "yamljs": "^0.3.0",
         "yaspeller": "^7.0.0"
