--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
         "remark": "remark -q -f .",
         "lint:md": "remark-preset-davidtheclark",
         "format:md": "remark-preset-davidtheclark --format",
-        "docs": "typedoc",
+        "docs": "rimraf docs && npm run docs:html",
+        "docs:html": "typedoc --tsconfig tsconfig.json --out docs/html/ --theme minimal --excludePrivate --plugin none",
+        "docs:md": "typedoc --tsconfig tsconfig.json --out docs/md/ --theme markdown --excludePrivate --mdHideSources --mdEngine github",
         "codecov": "codecov",
         "semantic-release": "semantic-release",
         "test:folio": "env-cmd --silent -e test folio tests/spec/",
@@ -147,7 +149,8 @@
         "ts-node": ">=9.0.0",
         "tsdx": "^0.14.1",
         "typed-rest-client": "^1.8.1",
-        "typedoc": "^0.20.28",
+        "typedoc": "^0.20.36",
+        "typedoc-plugin-markdown": "^1.2.1",
         "typescript": "^4.1.3",
         "typescript-object-utils": "^0.4.1",
         "unzip-stream": "^0.3.1",
