--- a/package.json
+++ b/package.json
@@ -136,9 +136,11 @@
         "pretty-quick": "^3.1.0",
         "randomcolor": "^0.5.4",
         "remark-cli": "^9.0.0",
+        "remark-html": "^13.0.1",
         "remark-lint-code-block-style": "^2.0.1",
         "remark-lint-ordered-list-marker-value": "^2.0.1",
         "remark-preset-davidtheclark": "^0.12.0",
+        "remark-preset-lint-recommended": "^5.0.0",
         "remark-validate-links": "^10.0.2",
         "rimraf": "^3.0.2",
         "semantic-release": ">=17.2.3",
