--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
         "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
         "remark": "remark -q -f .",
         "lint:md": "remark-preset-davidtheclark",
+        "lint:json": "jsonlint ./package.json --quiet",
+        "lint:docker": "dockerfile_lint -r default_rules.yaml",
         "format:md": "remark-preset-davidtheclark --format",
         "docs": "npm run docs:html",
         "docs:html": "typedoc --tsconfig tsconfig.json --out docs/html/ --theme minimal --excludePrivate --plugin none",
@@ -53,7 +55,7 @@
         "test:coverage": "env-cmd --silent -e test jest --collectCoverage --detectOpenHandles",
         "test:watch": "env-cmd --silent -e test jest --watch",
         "test:license": "license-checker --production --summary --unknown --onlyAllow=\"Apache-2.0;BSD;ISC;MIT;GPL-3.0;UNLICENSED;\"",
-        "lint:all": "npm run lint:clean && npm run lint && npm run lint:md",
+        "lint:all": "npm run lint:clean && npm run lint && npm run lint:md && npm run lint:json",
         "format:all": "npm run format && npm run format:md",
         "check:all": "npm run format:check",
         "test:all": "npm run test && npm run test:folio && npm run test:license",
@@ -97,6 +99,7 @@
         "dateformat": "^4.5.1",
         "dayjs": "^1.10.4",
         "dayjs-precise-range": "^1.0.1",
+        "dockerfile_lint": "0.3.4",
         "es6-promisify": "^6.1.1",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^6.15.0",
@@ -124,6 +127,7 @@
         "json-schemify": "0.0.10",
         "license-badger": "^0.18.0",
         "license-checker": "^25.0.1",
+        "jsonlint": "^1.6.3",
         "markdown-link-check": "^3.8.6",
         "minimatch": "^3.0.4",
         "mkdirp": "^1.0.4",
