docs: updates on documents
Added information on project structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "plugins": [
         "jest",
         "@typescript-eslint",
-        "spellcheck"
+        "spellcheck",
+        "github"
     ],
     "extends": [
         "plugin:github/recommended"
