--- a/.github/workflows/lint-md.yml
+++ b/.github/workflows/lint-md.yml
@@ -9,5 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm install
+      - run: npm install --legacy-peer-deps
       - run: npx remark --use validate-links . .github
