--- a/.github/workflows/release-semantic.yml
+++ b/.github/workflows/release-semantic.yml
@@ -21,7 +21,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: npm install
+      - run: npm install --legacy-peer-deps
 
       - run: npx -p @semantic-release/release-notes-generator -p @semantic-release/npm -p @semantic-release/github semantic-release
         env:
