--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -13,14 +13,12 @@ jobs:
           - dash
           - ksh
         file:
-          - nvm.sh
+          - ./scripts/nvm.sh
         include:
           - shell: bash
-            file: install.sh # only supported on bash
+            file: ./scripts/install.sh # only supported on bash
           - shell: bash
-            file: bash_completion # only needed in bash/zsh
-          - shell: bash
-            file: nvm-exec # only runs in bash
+            file: ./scripts/release.sh # only needed in bash/zsh
 
     steps:
       - uses: actions/checkout@v2
