--- a/package.json
+++ b/package.json
@@ -65,99 +65,99 @@
         "big-integer": "^1.6.48",
         "env-cmd": "^10.1.0",
         "isomorphic-unfetch": "^3.1.0",
-        "lodash": "^4.17.20"
+        "lodash": "^4.17.21"
     },
     "devDependencies": {
-        "@arkweid/lefthook": "^0.7.2",
-        "@semantic-release/github": "^7.2.0",
-        "@semantic-release/npm": "^7.0.10",
-        "@semantic-release/release-notes-generator": "^9.0.1",
-        "@types/d3-array": "^1.2.1",
-        "@types/d3-scale": "^2.0.0",
-        "@types/d3-shape": "^1.2.2",
+        "@arkweid/lefthook": "^0.7.6",
+        "@semantic-release/github": "^7.2.3",
+        "@semantic-release/npm": "^7.1.3",
+        "@semantic-release/release-notes-generator": "^9.0.2",
+        "@types/d3-array": "^1.2.8",
+        "@types/d3-scale": "^2.2.4",
+        "@types/d3-shape": "^1.3.5",
         "@types/got": "^9.6.11",
         "@types/humps": "^2.0.0",
-        "@types/jest": "^26.0.20",
+        "@types/jest": "^26.0.23",
         "@types/lodash.mergewith": "^4.6.6",
-        "@types/minimatch": "^3.0.3",
-        "@types/prettier": "^2.1.5",
-        "@types/shelljs": "^0.7.8",
-        "@typescript-eslint/eslint-plugin": "^4.15.0",
-        "@typescript-eslint/parser": "^4.15.0",
+        "@types/minimatch": "^3.0.4",
+        "@types/prettier": "^2.2.3",
+        "@types/shelljs": "^0.8.8",
+        "@typescript-eslint/eslint-plugin": "^4.26.1",
+        "@typescript-eslint/parser": "^4.26.1",
         "async-retry": "^1.3.1",
         "axios": "^0.21.1",
-        "boxen": "^5.0.0",
-        "canvas": "^2.7.0",
-        "codecov": "^3.8.1",
-        "conventional-changelog-cli": "^2.0.0",
-        "coveralls": "^3.0.0",
+        "boxen": "^5.0.1",
+        "canvas": "2.8.0",
+        "codecov": "^3.8.2",
+        "conventional-changelog-cli": "^2.1.1",
+        "coveralls": "^3.1.0",
         "crypto": "^1.0.1",
         "d3-array": "^1.2.1",
         "d3-scale": "^2.0.0",
         "d3-shape": "^1.2.0",
-        "date-fns": "^2.16.1",
+        "date-fns": "^2.22.1",
         "dateformat": "^4.5.1",
-        "dayjs": "^1.10.4",
+        "dayjs": "^1.10.5",
         "dayjs-precise-range": "^1.0.1",
         "dockerfile_lint": "0.3.4",
-        "es6-promisify": "^6.1.1",
-        "eslint": "^7.18.0",
-        "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-github": "^4.1.2",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^23.20.0",
+        "es6-promisify": "^7.0.0",
+        "eslint": "^7.28.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-github": "^4.1.3",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-jest": "^24.3.6",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-spellcheck": "0.0.8",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-spellcheck": "0.0.17",
         "folio": "^0.3.18",
         "form-data": "^4.0.0",
-        "fs-extra": "^9.1.0",
+        "fs-extra": "^10.0.0",
         "github-url-parse": "^0.1.0",
         "got": "^11.8.2",
         "gradient-string": "^1.2.0",
         "hasha": "5.2.2",
         "humps": "^2.0.1",
-        "import-fresh": "^3.2.1",
-        "is-regex": "^1.0.5",
-        "jest": "^26.6.3",
-        "jest-circus": "^26.6.3",
-        "js-yaml": "^4.0.0",
-        "jsdom": "16.4.0",
+        "import-fresh": "^3.3.0",
+        "is-regex": "^1.1.3",
+        "jest": "^27.0.4",
+        "jest-circus": "^27.0.4",
+        "js-yaml": "^4.1.0",
+        "jsdom": "16.6.0",
         "jsdom-global": "3.0.2",
         "json-schemify": "0.0.10",
-        "license-badger": "^0.18.0",
-        "license-checker": "^25.0.1",
         "jsonlint": "^1.6.3",
-        "markdown-link-check": "^3.8.6",
+        "license-badger": "^0.19.0",
+        "license-checker": "^25.0.1",
+        "markdown-link-check": "^3.8.7",
         "minimatch": "^3.0.4",
         "mkdirp": "^1.0.4",
-        "object-hash": "^2.1.1",
-        "opener": "^1.5.1",
-        "ow": "^0.13.2",
-        "parse-json": "^5.0.0",
+        "object-hash": "^2.2.0",
+        "opener": "^1.5.2",
+        "ow": "^0.24.1",
+        "parse-json": "^5.2.0",
         "path-type": "^4.0.0",
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0",
-        "randomcolor": "^0.5.4",
+        "randomcolor": "^0.6.2",
         "remark-cli": "^9.0.0",
         "remark-html": "^13.0.1",
         "remark-lint-code-block-style": "^2.0.1",
         "remark-lint-ordered-list-marker-value": "^2.0.1",
         "remark-preset-davidtheclark": "^0.12.0",
         "remark-preset-lint-recommended": "^5.0.0",
-        "remark-validate-links": "^10.0.2",
+        "remark-validate-links": "^10.0.4",
         "rimraf": "^3.0.2",
-        "semantic-release": ">=17.2.3",
-        "shelljs": "^0.7.8",
-        "slugify": "^1.4.6",
-        "styled-components": "^4.3.2",
-        "ts-jest": "^26.4.4",
-        "ts-node": ">=9.0.0",
+        "semantic-release": "^17.4.3",
+        "shelljs": "^0.8.4",
+        "slugify": "^1.5.3",
+        "styled-components": "^5.3.0",
+        "ts-jest": "^27.0.3",
+        "ts-node": "^10.0.0",
         "tsdx": "^0.14.1",
-        "typed-rest-client": "^1.8.1",
+        "typed-rest-client": "^1.8.4",
         "typedoc": "^0.20.36",
         "typedoc-plugin-markdown": "^1.2.1",
-        "typescript": "^4.1.3",
+        "typescript": "^4.3.2",
         "typescript-object-utils": "^0.4.1",
         "unzip-stream": "^0.3.1",
         "util.promisify": "^1.1.1",
@@ -168,7 +168,7 @@
         "xmldoc": "^1.1.2",
         "xmldom": "^0.6.0",
         "xpath": "0.0.32",
-        "yaml": "^1.10.0",
+        "yaml": "^1.10.2",
         "yamljs": "^0.3.0",
         "yaspeller": "^7.0.0"
     },
