--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "postreinstall": "yarn setup",
         "setup": "yarn",
         "yarn:import": "(rimraf ./yarn.lock || true) && yarn import",
+        "version:new": "yarn version --no-git-tag-version",
         "prepublishOnly": "npm run check:all && npm run build",
         "preinstall": "npm run clean",
         "prebuild": "rimraf dist coverage .cache || true",
@@ -128,9 +129,19 @@
         "jsonlint": "^1.6.3",
         "license-badger": "^0.19.0",
         "license-checker": "^25.0.1",
+        "@material/button": "^4.0.0",
+        "@material/elevation": "^4.0.0",
+        "@material/layout-grid": "^4.0.0",
+        "@material/radio": "^4.0.0",
+        "@material/ripple": "^4.0.0",
+        "@material/theme": "^4.0.0",
+        "@material/typography": "^4.0.0",
+        "@material/switch": "^4.0.0",
+        "@material/checkbox": "^4.0.0",
         "markdown-link-check": "^3.8.7",
         "minimatch": "^3.0.4",
         "mkdirp": "^1.0.4",
+        "mobx": "^6.3.2",
         "object-hash": "^2.2.0",
         "opener": "^1.5.2",
         "ow": "^0.24.1",
@@ -146,6 +157,7 @@
         "remark-preset-davidtheclark": "^0.12.0",
         "remark-preset-lint-recommended": "^5.0.0",
         "remark-validate-links": "^10.0.4",
+        "reshadow": "^0.0.1-alpha.80",
         "rimraf": "^3.0.2",
         "semantic-release": "^17.4.3",
         "shelljs": "^0.8.4",
@@ -155,8 +167,8 @@
         "ts-node": "^10.0.0",
         "tsdx": "^0.14.1",
         "typed-rest-client": "^1.8.4",
-        "typedoc": "^0.20.36",
-        "typedoc-plugin-markdown": "^1.2.1",
+        "typedoc": "^0.21.1",
+        "typedoc-plugin-markdown": "^3.10.2",
         "typescript": "^4.3.2",
         "typescript-object-utils": "^0.4.1",
         "unzip-stream": "^0.3.1",
