--- a/package.json
+++ b/package.json
@@ -70,6 +70,15 @@
     },
     "devDependencies": {
         "@arkweid/lefthook": "^0.7.6",
+        "@material/button": "^4.0.0",
+        "@material/checkbox": "^4.0.0",
+        "@material/elevation": "^4.0.0",
+        "@material/layout-grid": "^4.0.0",
+        "@material/radio": "^4.0.0",
+        "@material/ripple": "^4.0.0",
+        "@material/switch": "^4.0.0",
+        "@material/theme": "^4.0.0",
+        "@material/typography": "^4.0.0",
         "@semantic-release/github": "^7.2.3",
         "@semantic-release/npm": "^7.1.3",
         "@semantic-release/release-notes-generator": "^9.0.2",
@@ -119,6 +128,7 @@
         "hasha": "5.2.2",
         "humps": "^2.0.1",
         "import-fresh": "^3.3.0",
+        "inversify": "^5.1.1",
         "is-regex": "^1.1.3",
         "jest": "^27.0.4",
         "jest-circus": "^27.0.4",
@@ -129,15 +139,6 @@
         "jsonlint": "^1.6.3",
         "license-badger": "^0.19.0",
         "license-checker": "^25.0.1",
-        "@material/button": "^4.0.0",
-        "@material/elevation": "^4.0.0",
-        "@material/layout-grid": "^4.0.0",
-        "@material/radio": "^4.0.0",
-        "@material/ripple": "^4.0.0",
-        "@material/theme": "^4.0.0",
-        "@material/typography": "^4.0.0",
-        "@material/switch": "^4.0.0",
-        "@material/checkbox": "^4.0.0",
         "markdown-link-check": "^3.8.7",
         "minimatch": "^3.0.4",
         "mkdirp": "^1.0.4",
