Added info on workflows
Updates on github-actions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -147,7 +147,7 @@
                 "allowSingleLine": true
             }
         ],
-        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/explicit-member-accessibility": [
             "error",
             {
