--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
         "got": "^11.8.2",
         "gradient-string": "^1.2.0",
         "hasha": "5.2.2",
+        "http-errors": "^1.8.0",
         "humps": "^2.0.1",
         "import-fresh": "^3.3.0",
         "inversify": "^5.1.1",
@@ -159,6 +160,7 @@
         "remark-preset-lint-recommended": "^5.0.0",
         "remark-validate-links": "^10.0.4",
         "reshadow": "^0.0.1-alpha.80",
+        "rfdc": "^1.3.0",
         "rimraf": "^3.0.2",
         "semantic-release": "^17.4.3",
         "shelljs": "^0.8.4",
