--- a/package.json
+++ b/package.json
@@ -133,10 +133,12 @@
         "is-regex": "^1.1.3",
         "jest": "^27.0.4",
         "jest-circus": "^27.0.4",
+        "js-beautify": "^1.14.0",
         "js-yaml": "^4.1.0",
         "jsdom": "16.6.0",
         "jsdom-global": "3.0.2",
         "json-schemify": "0.0.10",
+        "json2yaml": "^1.1.0",
         "jsonlint": "^1.6.3",
         "license-badger": "^0.19.0",
         "license-checker": "^25.0.1",
