Added info on workflows
Updates on github-actions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,6 +62,7 @@
     "include": [
         "./src/*",
         "./tools/*",
+        "./idioms/*",
         "./tools/promise/*",
         "./tools/executor/*",
         "./tools/extension/*",
