--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "@typescript-eslint/parser": "^4.26.1",
         "async-retry": "^1.3.1",
         "axios": "^0.21.1",
+        "bcryptjs": "^2.4.3",
         "boxen": "^5.0.1",
         "canvas": "2.8.0",
         "codecov": "^3.8.2",
