Added info on workflows
Updates on github-actions

--- a/package.json
+++ b/package.json
@@ -99,11 +99,13 @@
         "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "boxen": "^5.0.1",
+        "brotli-size": "^4.0.0",
         "canvas": "2.8.0",
         "codecov": "^3.8.2",
         "conventional-changelog-cli": "^2.1.1",
         "coveralls": "^3.1.0",
         "crypto": "^1.0.1",
+        "cuid": "^2.1.8",
         "d3-array": "^1.2.1",
         "d3-scale": "^2.0.0",
         "d3-shape": "^1.2.0",
@@ -127,6 +129,8 @@
         "github-url-parse": "^0.1.0",
         "got": "^11.8.2",
         "gradient-string": "^1.2.0",
+        "grommet": "^2.17.3",
+        "gzip-size": "^6.0.0",
         "hasha": "5.2.2",
         "http-errors": "^1.8.0",
         "humps": "^2.0.1",
@@ -142,6 +146,7 @@
         "json-schemify": "0.0.10",
         "json2yaml": "^1.1.0",
         "jsonlint": "^1.6.3",
+        "jsonwebtoken": "^8.5.1",
         "license-badger": "^0.19.0",
         "license-checker": "^25.0.1",
         "markdown-link-check": "^3.8.7",
