--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
         "folio": "^0.3.18",
         "form-data": "^4.0.0",
         "fs-extra": "^10.0.0",
+        "functools-ts": "^1.0.3",
         "github-url-parse": "^0.1.0",
         "got": "^11.8.2",
         "gradient-string": "^1.2.0",
