--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
         "license-badger": "^0.19.0",
         "license-checker": "^25.0.1",
         "markdown-link-check": "^3.8.7",
+        "mime-types": "^2.1.31",
         "minimatch": "^3.0.4",
         "mkdirp": "^1.0.4",
         "mobx": "^6.3.2",
