Added info on workflows
Updates on github-actions

--- a/.yarnrc
+++ b/.yarnrc
@@ -1,3 +1,5 @@
 save-prefix "^"
 --no-lockfile true
 unsafe-disable-integrity-migration true
+ignore-engines true
+version-git-message "Bumps to v%s"
