--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,7 @@ repos:
     rev: 014e777db9691db091c5b1de9b459a8c27609058
     hooks:
       - id: markdownlint
+  - repo: https://github.com/gruntwork-io/pre-commit
+    rev: 0.1.12 # Get the latest from: https://github.com/gruntwork-io/pre-commit/releases
+    hooks:
+      - id: shellcheck
