--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "@types/minimatch": "^3.0.4",
         "@types/prettier": "^2.2.3",
         "@types/shelljs": "^0.8.8",
+        "@types/winston": "^2.4.4",
         "@typescript-eslint/eslint-plugin": "^4.26.1",
         "@typescript-eslint/parser": "^4.26.1",
         "async-retry": "^1.3.1",
@@ -192,6 +193,7 @@
         "utility-types": "^3.10.0",
         "uuid": "^8.3.2",
         "vague-time": "^2.4.2",
+        "winston": "^2.4.5",
         "ws": "^7.4.3",
         "xmldoc": "^1.1.2",
         "xmldom": "^0.6.0",
