Add docs on workflow
Added new github actions

--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
         "bump:major": "npm version major --no-git-tag-version",
         "postreinstall": "yarn setup",
         "setup": "yarn",
-        "yarn:import": "(rimraf ./yarn.lock || true) && yarn import",
+        "yarn:import": "(del-cli ./yarn.lock || true) && yarn import",
         "version:new": "yarn version --no-git-tag-version",
         "prepublishOnly": "npm run check:all && npm run build",
         "preinstall": "npm run clean",
         "update-lock": "npx yarn-deduplicate",
-        "prebuild": "rimraf dist coverage .cache || true",
+        "prebuild": "del-cli dist coverage .cache || true",
         "build": "tsdx build",
         "watch": "tsdx watch",
-        "clean": "rimraf dist || true",
-        "reinstall": "rimraf ./node_modules || true",
+        "clean": "del-cli dist || true",
+        "reinstall": "del-cli ./node_modules || true",
         "coverage": "cat ./coverage/lcov.info | coveralls",
         "version": "git add -A dist",
         "postpublish": "git push && git push --tags",
@@ -33,7 +33,7 @@
         "markdown:check": "markdown-link-check ./README.md ./SECURITY.md",
         "gitlog": "node ./scripts/changelog.js",
         "lint": "eslint --cache --fix --quiet --cache-location .cache/ --format codeframe --ext js,ts .",
-        "lint:clean": "rimraf .eslintcache || true",
+        "lint:clean": "del-cli .eslintcache || true",
         "lint:report": "tsdx lint src tools --report-file report.json",
         "license:badge": "license-badger --corrections --uncategorizedLicenseTemplate \"\\${license} (\\${name} (\\${version}))\" --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(project, deps, and bundled devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --packageJson --production -l licenseInfo.json ./badges/licenses-badge.svg",
         "license:badge-dev": "license-badger --corrections --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(all devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --allDevelopment -l licenseInfo.json ./badges/licenses-badge-dev.svg",
@@ -174,7 +174,7 @@
         "remark-validate-links": "^10.0.4",
         "reshadow": "^0.0.1-alpha.80",
         "rfdc": "^1.3.0",
-        "rimraf": "^3.0.2",
+        "del-cli": "4.0.1",
         "semantic-release": "^17.4.3",
         "shelljs": "^0.8.4",
         "slugify": "^1.5.3",
