--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
         "dateformat": "^4.5.1",
         "dayjs": "^1.10.5",
         "dayjs-precise-range": "^1.0.1",
+        "del-cli": "4.0.1",
         "dockerfile_lint": "0.3.4",
         "es6-promisify": "^7.0.0",
         "eslint": "^7.28.0",
@@ -135,6 +136,7 @@
         "gzip-size": "^6.0.0",
         "hasha": "5.2.2",
         "http-errors": "^1.8.0",
+        "humanize-duration": "^3.27.0",
         "humps": "^2.0.1",
         "import-fresh": "^3.3.0",
         "inversify": "^5.1.1",
@@ -174,7 +176,6 @@
         "remark-validate-links": "^10.0.4",
         "reshadow": "^0.0.1-alpha.80",
         "rfdc": "^1.3.0",
-        "del-cli": "4.0.1",
         "semantic-release": "^17.4.3",
         "shelljs": "^0.8.4",
         "slugify": "^1.5.3",
